# gpha-mscape-sample-qc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docker.yml  test-build.yml
src/mscape_sample_qc/: qc_functions.py  qc_sample.py
tests/: conftest.py  test_main.py  test_qc_functions.py
tests/test_data/: example_classifier_calls.csv  example_qc_thresholds.yaml
